argocd/k8s/loki/manifests/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki
  namespace: monitoring
specs:
  # Loki
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: single-binary
        app.kubernetes.io/name: loki
    ingress:
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: alloy
              io.kubernetes.pod.namespace: monitoring
          - matchLabels:
              app.kubernetes.io/name: grafana
              io.kubernetes.pod.namespace: monitoring
          - matchLabels:
              app.kubernetes.io/component: canary
              app.kubernetes.io/name: loki
              io.kubernetes.pod.namespace: monitoring
        toPorts:
          - ports:
              - port: "3100"
                protocol: TCP
    egress:
      # Loki memberlist
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: loki
              io.kubernetes.pod.namespace: monitoring
        toPorts:
          - ports:
              - port: "7946"
                protocol: ANY
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: ANY
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP

  # Loki Canary
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: canary
        app.kubernetes.io/name: loki
    ingress:
      - {}
    egress:
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: ANY
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/component: single-binary
              app.kubernetes.io/name: loki
              io.kubernetes.pod.namespace: monitoring
        toPorts:
          - ports:
              - port: "3100"
                protocol: TCP
